--- a/styles/styles.css
+++ b/styles/styles.css
@@ -30,14 +30,52 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.container {
+  width: 1160px;
+  margin: 0 auto;
+}
+
 body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
   font-weight: 400;
   background-color: #ffffff;
   color: #000000;
-  box-sizing: border-box;
+}
+
+.main-container {
+  flex-grow: 1;
+}
+
+header {
+  margin-top: 40px;
+}
+
+header .container {
+  background-color: #FFE17F;
+}
+
+.header-top {
+  padding: 0 60px;
+}
+
+
+.header-middle {
+  padding: 0 60px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
 }
 
 .main-link {
@@ -50,21 +88,98 @@ body {
   text-transform: uppercase;
 }
 
-header .container {
-  background-color: #FFE17F;
-}
-
 .menu-user-form {
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   line-height: 20px;
   width: 517px;
   height: 40px;
   text-align: center;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.menu-user-form input {
+  width: 359px;
+  height: 40px;
+  margin: 0;
+  padding: 0;
+  border: 1px solid black;
+  background-color: #FFE17F;
+  color: #000000;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.button-search {
+  margin: 0;
+  padding: 0;
+  border: 1px solid black;
+  background-color: #FFE17F;
+  color: #000000;
+  width: 160px;
+  height: 42px;
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.menu-user-form {
+  display: flex;
+}
+
+
+.menu-user-list {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  margin: 0;
+  padding: 0;
+}
+
+.menu-user-list-action {
+  display: flex;
+  width: 230px;
+
 }
 
 .menu-user-link {
   color: #000000;
   text-decoration: none;
+}
+
+.button-log {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: #FFE17F;
+  color: #000000;
+  width: 115px;
+  height: 42px;
+  font-family: "Rubik", sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+}
+
+.header-bottom {
+  padding: 0 60px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.menu-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 471px;
+  list-style: none;
 }
 
 .menu-link {
@@ -77,13 +192,52 @@ header .container {
   text-transform: uppercase;
 }
 
+.slider-item {
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-gallery {
+  padding-left: 10px;
+  width: 560px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.slider-button {
+  margin: 0;
+  padding: 0;
+  width: 20px;
+  height: 60px;
+}
+
+.slider-wrapper {
+  width: 560px;
+}
+
 .slider-number {
   font-size: 180px;
   font-weight: 700;
   color: #FFFFFF;
+  padding-right: 49px;
+  margin-left: auto;
+  width: 250px;
+}
+
+.slider-pagination {
+  display: flex;
+  justify-content: space-between;
+  width: 76px;
+}
+
+.slider-pagination-item {
+  list-style: none;
 }
 
 .slider-pagination-button {
+  margin: 0;
+  padding: 0;
   width: 12px;
   height: 12px;
   border: 2px solid #000000;
@@ -91,11 +245,39 @@ header .container {
 }
 
 .slider-pagination-button-current {
-  width: 12px;
-  height: 12px;
+  margin: 0;
+  padding: 0;
   border: 2px solid #000000;
   border-radius: 50%;
   background-color: #000000;
+}
+
+.slider-line {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.slider-specifications-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style:  none;
+}
+
+.slider-specifications-item {
+  padding-right: 20px;
+  font-size: 36px;
+}
+
+.slider-specifications-item:last-child {
+  padding-right: 0;
+}
+
+.slider-specifications-item-descr {
+  margin: 0;
+  font-size: 16px;
+  line-height: 30px;
 }
 
 .catalog-item-img {
@@ -103,6 +285,12 @@ header .container {
   height: 160px;
   background-color: #FFE17F;
   color: #000000;
+}
+
+.navigation-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .navigation-link {
@@ -126,6 +314,17 @@ header .container {
   font-size: 18px;
 }
 
+.catalog-list {
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.catalog-item {
+  width: 160px;
+  list-style: none;
+}
+
 .catalog-item-subtitle {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
@@ -142,6 +341,16 @@ header .container {
   color: #000000;
 }
 
+.service-column {
+  display: flex;
+}
+
+.service-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 .order {
   background-color: #ffffff;
   color: #000000;
@@ -150,13 +359,22 @@ header .container {
 .service-item {
   font-family: "Raleway", sans-serif;
   line-height: 21px;
+  width: 280px;
+}
 
+.service-item-wrapper {
+  padding-left: 116px;
+  width: 694px;
 }
 
 .service-item-subtitle, .title {
   font-family: "Raleway", sans-serif;
   font-size: 50px;
   line-height: 50px;
+}
+
+.service-item-descr {
+  width: 452px;
 }
 
 .order-button {
@@ -167,6 +385,23 @@ header .container {
   width: 1160px;
   height: 100px;
   text-align: center;
+}
+
+.index-column .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.about {
+  width: 520px;
+}
+
+.about-descr {
+  width: 497px;
+}
+
+.contacts {
+  width: 520px;
 }
 
 .form-email input {
@@ -206,11 +441,41 @@ header .container {
 .mailing {
   background-color: #F0F0F0;
   color: #000000;
+}
 
+.mailing-wrapper {
+  padding-top: 64px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.mailing-wrapper .title {
+  margin: 0;
+  width: 348px;
+}
+
+.mailing-descr {
+  width: 560px;
 }
 
 .form-email {
+  display: flex;
   width: 810px;
+  height: 57px;
+}
+
+.form-email input {
+  margin: 0;
+  padding: 0;
+  width: 557px;
+  height: 55px;
+}
+
+.form-email .button {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  width: 253px;
   height: 57px;
 }
 
@@ -220,11 +485,35 @@ footer {
 
 }
 
-.footer-address, .footer-phone {
+.footer-middle {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+.footer-address {
   font-size: 16px;
   line-height: 19px;
   text-decoration: none;
   color: #ffffff;
+  width: 239px;
+}
+
+.footer-phone {
+  width: 174px;
+  font-size: 16px;
+  line-height: 19px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.footer-menu-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 444px;
+  list-style: none;
 }
 
 .footer-menu-item {
@@ -239,6 +528,20 @@ footer {
 .footer-top img {
   width: 145px;
   height: 36px;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+}
+
+.social-list {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 150px;
+  list-style: none;
 }
 
 .made-in {
