flex layout catalog
Флекс верстка крупных блоков внутренней страницы

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -131,7 +131,6 @@ header .container {
   display: flex;
 }
 
-
 .menu-user-list {
   list-style: none;
   display: flex;
@@ -144,7 +143,6 @@ header .container {
 .menu-user-list-action {
   display: flex;
   width: 230px;
-
 }
 
 .menu-user-link {
@@ -411,6 +409,8 @@ header .container {
 }
 
 .button {
+  margin: 0;
+  padding: 0;
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 21px;
@@ -482,7 +482,6 @@ header .container {
 footer {
   background-color: #444444;
   color: #ffffff;
-
 }
 
 .footer-middle {
@@ -549,11 +548,46 @@ footer {
   height: 33px;
 }
 
+.main-inner .title {
+  padding-left: 60px;
+}
+
+.breadcrumbs-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  padding-left: 60px;
+  display: flex;
+}
+
+.breadcrumbs-item {
+  padding-right: 36px;
+}
+
+.breadcrumbs-item:last-child {
+  padding-right: 0;
+}
+
 .breadcrumbs-link {
   font-size: 16px;
   line-height: 19px;
   color: #000000;
   text-decoration: none;
+}
+
+.catalog-inner .container {
+  display: flex;
+}
+
+.catalog-inner-filter {
+  width: 320px;
+  padding-left: 60px;
+}
+
+.catalog-inner-filter-group {
+  margin: 0;
+  padding: 0;
+  width: 200px;
 }
 
 .catalog-inner-filter-title, .catalog-inner-sorting-title {
@@ -573,6 +607,7 @@ footer {
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
+  background-color: #F0F0F0
 }
 
 .catalog-inner-card-link {
@@ -581,8 +616,16 @@ footer {
 }
 
 .catalog-inner-filter-choiсe {
+  display: block;
   font-size: 16px;
   line-height: 19px;
+}
+
+button.main-link {
+  margin: 0;
+  padding: 0;
+  display: block;
+  width: 220px;
 }
 
 .catalog-inner {
@@ -591,8 +634,39 @@ footer {
 }
 
 .catalog-inner-wrapper {
+  padding: 70px 40px 78px 40px;
   background-color: #ffffff;
   color: #000000;
+}
+
+.catalog-inner-sorting {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 40px;
+}
+
+.catalog-inner-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.catalog-inner-card {
+  width: 360px;
+}
+
+.catalog-inner-card-descr {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.catalog-inner-card-subtitle {
+  margin: 0;
+  width: 226px;
 }
 
 .download-more {
@@ -605,7 +679,12 @@ footer {
   height: 55px;
 }
 
-.pagination {
+.pagination-list {
+  margin: 0;
+  padding: 25px 25px;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
   background-color: #F0F0F0;
   color: #000000;
 }
@@ -623,4 +702,13 @@ footer {
   font-family: "Raleway", sans-serif;
   font-size: 18px;
   line-height: 21px;
+}
+
+.pagination-number-list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
 }
