--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,6 +68,7 @@ main {
 
 .header-top {
   padding: 0 60px;
+  margin-bottom: 30px;;
 }
 
 
@@ -75,7 +76,8 @@ main {
   padding: 0 60px;
   display: flex;
   justify-content: space-between;
-  margin-top: 30px;
+  align-items: baseline;
+  margin-bottom: 30px;
 }
 
 .main-link {
@@ -88,9 +90,10 @@ main {
   text-transform: uppercase;
 }
 
-.menu-user-form {
+.menu-form {
   margin: 0;
   padding: 0;
+  margin-right: 26px;
   font-size: 16px;
   line-height: 20px;
   width: 517px;
@@ -101,7 +104,7 @@ main {
   line-height: 20px;
 }
 
-.menu-user-form input {
+.menu-form input {
   width: 359px;
   height: 40px;
   margin: 0;
@@ -127,45 +130,81 @@ main {
   line-height: 20px;
 }
 
-.menu-user-form {
+.menu-form {
   display: flex;
+}
+
+.menu-search-log {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.account {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.account a, .account .button-logout {
+  display: none;
+}
+
+.logged a, .logged .button-logout {
+  display: flex;
+}
+
+.logged .button-login {
+  display: none;
 }
 
 .menu-user-list {
   list-style: none;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: baseline;
   margin: 0;
   padding: 0;
-}
-
-.menu-user-list-action {
-  display: flex;
-  width: 230px;
+  width: 240px;
 }
 
 .menu-user-link {
+  display: block;
   color: #000000;
   text-decoration: none;
 }
 
-.button-log {
+.menu-user-item {
+  margin-right: 26px;
+}
+
+.menu-user-item:last-child {
+  margin-right: 0;
+}
+
+.button-login, .button-logout {
   margin: 0;
   padding: 0;
   border: 0;
   background-color: #FFE17F;
   color: #000000;
-  width: 115px;
-  height: 42px;
+  width: 56px;
+  height: 30px;
   font-family: "Rubik", sans-serif;
   font-size: 18px;
   line-height: 30px;
 }
 
+.account-name-link {
+  display: block;
+  width: 120px;
+  color: #000000;
+  text-decoration: none;
+  margin-right: 26px;
+}
+
 .header-bottom {
   padding: 0 60px;
-  margin-top: 30px;
   display: flex;
   justify-content: space-between;
   align-items: baseline;
@@ -531,12 +570,13 @@ main {
 
 .footer-bottom {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
 .social-list {
   margin: 0;
   padding: 0;
+  padding-right: 330px;
   display: flex;
   justify-content: space-between;
   width: 150px;
