--- a/styles/styles.css
+++ b/styles/styles.css
@@ -983,7 +983,11 @@ main {
 }
 
 .social-item {
-  margin-right: 20px;
+  margin-right: 15px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .social-item:last-child {
